--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 </script>
 <!-- Button trigger modal -->
 	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam nobis esse delectus quaerat laudantium minima facere minus earum nam eligendi, perspiciatis quisquam voluptate adipisci, nostrum expedita qui exercitationem tempore soluta eveniet quod ex quae sint consequuntur! Itaque corporis excepturi expedita hic, error id exercitationem aspernatur similique ratione porro dolorum aperiam tenetur ex facere dolore illum. Tenetur sunt perferendis fuga corporis, sapiente asperiores delectus voluptatibus, laborum culpa quo ducimus a ipsam libero tempora consequuntur quisquam est, exercitationem optio officia omnis ullam. Nulla suscipit ab officiis! Placeat doloremque vel, nobis aperiam omnis porro culpa facilis cumque, consequatur expedita et quod necessitatibus asperiores.</p>
-<button type="button" id = open-modal class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+<button type="button" id = open-modal class="btn btn-primary" data-bs-toggle="modal" data-bs-target="New Modal">
   Launch demo modal
 </button>
 
