--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
 <!-- Modal -->
 <div class="modal fade" id="accio-modal" tabindex="-1" aria-labelledby="accio-modalLabel" aria-hidden="true">
   <div class="modal-dialog">
-    <div class="modal-content">
+    <div class="modal-dialog-centered">
       <div class="modal-header">
         <h5 class="newton-modal" id="accio-modal">New Modal</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
