--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 </script>
 <!-- Button trigger modal -->
 	<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" id = open-modal>
   Launch newton modal
 </button>
 
