--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
+  <div class="modal-dialog" class="modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="newton-modal modal-title" id="newton-modal">New Modal</h5>
