--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
   <div class="modal-dialog" class="modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal" id="newton-modal">New Modal</h5>
+        <h5 class="newton-modal modal-title" id="newton-modal">New Modal</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
